Contact Us form is fixed
The contact us form officially does not have the bug where "your query" is misaligned but also the boxes are more stylised and the query box is not resizable anymore. The footer is a little too high, which has to be adjusted later

--- a/retroXchange/public/style.css
+++ b/retroXchange/public/style.css
@@ -33,6 +33,51 @@ a:visited {
     grid-template-rows: 1fr 10fr 1fr;
 }
 
+.contact-us-page-layout {
+    display: grid;
+
+    grid-template-rows: 1fr 30fr 1fr;
+}
+
+.contact-us-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    grid-row: 1;
+}
+
+.contact-us-form {
+    display: flex;
+    
+    justify-content: center;
+    align-items: center;
+}
+
+.contact-us-form input {
+    display: flex;
+    flex-wrap: wrap;
+
+    margin: 10px;
+    border-radius: 10px;
+    border: 1px solid black;
+
+    font-size: 120%;
+}
+
+.contact-us-form textarea {
+    display: flex;
+    flex-wrap: wrap;
+    width: 97%;
+
+    margin: 10px;
+    border-radius: 10px;
+    border: 1px solid black;
+
+    resize: none;
+    font-size: 120%;
+}
+
 .header-grid-layout {
     display: grid;
     background-color: #91c788;
@@ -293,6 +338,7 @@ a:visited {
 .about-us-box-style {
     background-color: white;
     border-radius: 10px;
+    border: 1px solid black;
 }
 
 /* Products */
@@ -451,11 +497,11 @@ footer > p {
 }
 .input[type="button"],
 input[type="submit"] {
-    background-color: #52734d;
+    background-color: #ddffbc;
 }
 .input[type="button"],
 input[type="submit"]:hover {
-    background-color: #ddffbc;
+    background-color: #52734d;
 }
 .center-header {
     margin: 0 auto;
